#  Copyright 2022 Ahmed Charles <me@ahmedcharles.com>
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[package]
name = "ch32v307v"
version = "0.0.1"
authors = ["Ahmed Charles <me@ahmedcharles.com>"]
description = "Board support crate for CH32V307V boards."
repository = "https://gitlab.com/ahmedcharles/ch32v307v"
readme = "README.md"
keywords = ["riscv", "register", "peripheral"]
categories = ["embedded", "hardware-support", "no-std"]
license = "Apache-2.0"
rust-version = "1.59"
edition = "2021"

[dependencies]
ch32v30x-hal = "0.0.1"
embedded-hal = "=1.0.0-alpha.7"
riscv = "0.7.0"
nb = "1.0.0"

[features]
board-ch32v307v-r1 = []

[package.metadata.docs.rs]
features = ['board-ch32v307v-r1']
